Add social icon links and remove email form

--- a/index.html
+++ b/index.html
@@ -221,42 +221,45 @@
         <div>
           <p class="eyebrow">Подписка и соцсети</p>
           <h2>Оставаться на связи</h2>
-          <p class="subtitle">Раз в месяц — короткое письмо о прогрессе, бете и новых историях. Без спама.</p>
-          <form class="subscribe-form">
-            <label class="sr-only" for="email">Ваш email</label>
-            <input id="email" name="email" type="email" placeholder="например, name@example.com" />
-            <button class="button button--primary" type="submit">Подписаться</button>
-          </form>
-          <p class="microcopy">Можно отписаться в любой момент одним кликом.</p>
+          <p class="subtitle">Следите за обновлениями там, где вам удобно.</p>
           <div class="socials">
             <p>Следить за разработкой удобнее там, где вы уже есть:</p>
             <div class="socials__links">
-              <a class="button button--link button--icon" href="https://t.me" target="_blank" rel="noreferrer">
-                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <a
+                class="socials__icon"
+                href="https://t.me/flowers_beneath_the_asphalt"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="Telegram"
+              >
+                <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                   <path d="M21.8 4.2a1.2 1.2 0 0 0-1.3-.2L3.5 11.8a1 1 0 0 0 .1 1.9l3.9 1.2 1.6 4.7a1 1 0 0 0 1.7.4l2.4-2.2 3.8 2.8c.7.5 1.7.1 1.9-.8l2.9-14.5a1.2 1.2 0 0 0-.9-1.4Z" />
                 </svg>
-                Telegram
               </a>
-              <a class="button button--link button--icon" href="https://instagram.com" target="_blank" rel="noreferrer">
-                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <a
+                class="socials__icon"
+                href="https://www.instagram.com/flowers_beneath_the_asphalt"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="Instagram"
+              >
+                <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                   <rect x="4" y="4" width="16" height="16" rx="4" ry="4" />
                   <circle cx="12" cy="12" r="4.2" />
                   <circle cx="17" cy="7" r="1.1" />
                 </svg>
-                Instagram
               </a>
-              <a class="button button--link button--icon" href="https://www.patreon.com" target="_blank" rel="noreferrer">
-                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <a
+                class="socials__icon"
+                href="https://www.patreon.com/flowersbeneaththeasphalt"
+                target="_blank"
+                rel="noreferrer"
+                aria-label="Patreon"
+              >
+                <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                   <circle cx="14.5" cy="7.5" r="4.5" />
                   <rect x="4" y="5" width="3.5" height="14" rx="1.2" />
                 </svg>
-                Patreon
-              </a>
-              <a class="button button--link button--icon" href="mailto:eric@example.com">
-                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-                  <path d="M4.5 6h15a1.5 1.5 0 0 1 1.5 1.5v9a1.5 1.5 0 0 1-1.5 1.5h-15A1.5 1.5 0 0 1 3 16.5v-9A1.5 1.5 0 0 1 4.5 6Zm0 1.5 7.5 4.5 7.5-4.5" />
-                </svg>
-                eric@example.com
               </a>
             </div>
           </div>
