--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
             <div class="list__item">Встроенный «центр поддержки» — в финале и в ключевых моментах истории появляются ссылки на горячие линии, центры помощи и НКО.</div>
             <div class="list__item">Доступность — игра запускается в браузере, позже появится в виде мобильного приложения, чтобы истории можно было проходить офлайн.</div>
           </div>
+          <div class="media-grid" aria-label="Фотографии из разработки игры">
+            <figure class="media-card">
+              <img src="img/screen1.jpeg" alt="Скриншот сцены с одуванчиками на тротуаре" />
+              <figcaption>Сцена с одуванчиками и вечерним светом — важный мотив истории.</figcaption>
+            </figure>
+            <figure class="media-card">
+              <img src="img/home.jpeg" alt="Скриншот комнаты главной героини" />
+              <figcaption>Комната Мии, где она переписывается с друзьями и остаётся наедине с собой.</figcaption>
+            </figure>
+            <figure class="media-card">
+              <img src="img/screen3.jpeg" alt="Скриншот сцены на крыше" />
+              <figcaption>Разговор на крыше — эпизод, который помогает героям услышать друг друга.</figcaption>
+            </figure>
+          </div>
         </div>
       </div>
     </section>
